/*
 * Copyright 2019 Johns Hopkins University
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Developed by: Roberts Group
 *               Johns Hopkins University
 *               http://biophysics.jhu.edu/roberts/
 *
 * Author(s): Elijah Roberts
 */

syntax = "proto2";
package lm.model;

import "robertslab/pbuf/NDArray.proto";

message NoiseModel {
    required uint32 number_processes                                    = 1;
    required double process_update_interval                             = 2;
    required robertslab.pbuf.NDArray process_types                      = 3;    //1D; rows=processes; type=uint32
    required robertslab.pbuf.NDArray process_parameters                 = 4;    //2D; rows=processes,cols=10(process_parameters); type=double
    required robertslab.pbuf.NDArray reaction_dependencies              = 5;    //3D; i=reactions,j=10(reaction_constants),k=processes; type=uint32
}
